# libGPUInfo

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  android_build.sh
.github/workflows/: android-clang.yaml  linux-clang.yaml  linux-gcc.yaml
docs/: changelog.md
source/: CMakeLists.txt  arm_gpuinfo.cpp  libgpuinfo.cpp  libgpuinfo.hpp
