#
# This confidential and proprietary software may be used only as
# authorised by a licensing agreement from Arm Limited.
#    Copyright 2023-2024 Arm Ltd. All Rights Reserved.
# The entire notice above must be reproduced on all authorised
# copies and copies may only be made to the extent permitted
# by a licensing agreement from Arm Limited.
#

cmake_minimum_required(VERSION 3.15)

set(CMAKE_CXX_STANDARD 14)

project(libGPUInfo VERSION 1.2.0)

add_subdirectory(source)
